--- a/karl-shop/src/app/components/cart/cart.component.html
+++ b/karl-shop/src/app/components/cart/cart.component.html
@@ -22,31 +22,6 @@
               </tr>
             </thead>
             <tbody>
-              <!-- <tr>
-                <td class="cart_product_img d-flex align-items-center">
-                  <a href="#">
-                    <img src="../assets/images/product-img/product-9.jpg" alt="Product">
-                  </a>
-                  <h6>Adidas Cloudfoam X5</h6>
-                </td>
-                <td class="price">
-                  <span>$399</span>
-                </td>
-                <td class="qty">
-                  <div class="quantity">
-                    <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;">
-                      <i class="fa fa-minus" aria-hidden="true"></i>
-                    </span>
-                    <input type="number" class="qty-text" id="qty" step="1" min="1" max="99" name="quantity" value="1">
-                    <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;">
-                      <i class="fa fa-plus" aria-hidden="true"></i>
-                    </span>
-                  </div>
-                </td>
-                <td class="total_price">
-                  <span>$399</span>
-                </td>
-              </tr> -->
               <tr *ngFor="let pro of _productInCart">
                 <td class="cart_product_img d-flex align-items-center">
                   <a href="#">
@@ -88,7 +63,7 @@
           </div>
           <div class="update-checkout w-50 text-right">
             <a href="#">Hủy đơn hàng</a>
-            <a href="#">Cập nhật đơn hàng</a>
+            <a class="cart-submit" (click)="updateCart()">Cập nhật đơn hàng</a>
           </div>
         </div>
 
@@ -171,4 +146,5 @@
     </div>
   </div>
 </div>
+
 <!-- ****** Cart Area End ****** -->
