--- a/karl-shop/src/app/components/product-detail/product-detail.component.html
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.html
@@ -27,7 +27,8 @@
           <div id="product_details_slider" class="carousel slide" data-ride="carousel">
 
             <ol class="carousel-indicators">
-              <li style="display: inline-flex" *ngFor="let img of _hinhSanPham; let i = index" data-target="#product_details_slider" [attr.data-slide-to]="i" [ngClass]="i == 0 ? 'active' : ''">
+              <li style="display: inline-flex" *ngFor="let img of _hinhSanPham; let i = index" data-target="#product_details_slider" [attr.data-slide-to]="i"
+                [ngClass]="i == 0 ? 'active' : ''">
                 <img src="{{img}}">
               </li>
             </ol>
@@ -51,8 +52,10 @@
             <a href="#">{{_detailProduct.tenSanPham}}</a>
           </h4>
 
-          <h4 class="price">{{_detailProduct.donGia}}</h4>
-
+          <!-- missing price -->
+          <h4 class="price">{{_detailProduct.hangTrongKho[0].donGia | currency: 'VND' : 'code' : '1.0'}}</h4>
+          <!-- missing price -->
+          
           <p class="available">Trạng Thái:
             <span class="text-muted">Còn hàng</span>
           </p>
@@ -172,33 +175,6 @@
                     consectetur accusantium perspiciatis praesentium eligendi, in fugiat?</p>
                   <a href="#">View Full Product Details</a>
                 </div>
-                <!-- Add to Cart Form -->
-                <form class="cart" method="post">
-                  <div class="quantity">
-                    <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;">
-                      <i class="fa fa-minus" aria-hidden="true"></i>
-                    </span>
-
-                    <input type="number" class="qty-text" id="qty2" step="1" min="1" max="12" name="quantity" value="1">
-
-                    <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;">
-                      <i class="fa fa-plus" aria-hidden="true"></i>
-                    </span>
-                  </div>
-                  <button type="submit" name="addtocart" value="5" class="cart-submit">Add to cart</button>
-                  <!-- Wishlist -->
-                  <div class="modal_pro_wishlist">
-                    <a href="wishlist.html" target="_blank">
-                      <i class="ti-heart"></i>
-                    </a>
-                  </div>
-                  <!-- Compare -->
-                  <div class="modal_pro_compare">
-                    <a href="compare.html" target="_blank">
-                      <i class="ti-stats-up"></i>
-                    </a>
-                  </div>
-                </form>
 
                 <div class="share_wf mt-30">
                   <p>Share With Friend</p>
